Category Task fixed comments