@@ -1,12 +1,10 @@
 package org.example.springproject.service.impl;
 
 import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.example.springproject.dto.category.CategoryDto;
 import org.example.springproject.dto.category.CreateCategoryRequestDto;
+import org.example.springproject.exception.EntityNotFoundException;
 import org.example.springproject.mapper.CategoryMapper;
 import org.example.springproject.model.Category;
 import org.example.springproject.repository.category.CategoryRepository;
@@ -24,22 +22,15 @@ public class CategoryServiceImpl implements CategoryService {
     public List<CategoryDto> findAll(Pageable pageable) {
         return categoryRepository.findAll(pageable).stream()
                 .map(categoryMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public CategoryDto getById(Long id) {
         Category category = categoryRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException(
+                .orElseThrow(() -> new EntityNotFoundException(
                         "There is no category with id " + id));
         return categoryMapper.toDto(category);
-    }
-
-    @Override
-    public Category getCategoryById(Long id) {
-        return categoryRepository.findById(id)
-                .orElseThrow(() -> new NoSuchElementException(
-                        "There is no category with id " + id));
     }
 
     @Override
@@ -50,16 +41,12 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     public CategoryDto update(Long id, CreateCategoryRequestDto categoryDto) {
-        Optional<Category> foundCategory = categoryRepository.findById(id);
-
-        if (foundCategory.isEmpty()) {
-            throw new NoSuchElementException("There is no category with id " + id);
-        }
-        Category category = foundCategory.get();
-        category.setName(categoryDto.getName());
-        category.setDescription(categoryDto.getDescription());
-        Category updatedCategory = categoryRepository.save(category);
-        return categoryMapper.toDto(updatedCategory);
+        Category category = categoryRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "No such a category with id: " + id
+                ));
+        categoryMapper.updateCategoryFromDto(categoryDto, category);
+        return categoryMapper.toDto(categoryRepository.save(category));
     }
 
     @Override
